# nonebot-plugin-send-anything-anywhere

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.example.toml  pyproject.toml
.github/: renovate.json
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/setup-node/: action.yml
.github/workflows/: release-drafter.yml  release.yml  test-no-adapters.yml  test.yml  website-deploy.yml  website-preview.yml
docs/: docusaurus.config.js  package.json  sidebars.js
docs/docs/dev/: 01-readme.md  02-adapter.md  adapter.md  todo.md
docs/docs/usage/: 01-quickstart.md  02-message-build.md  03-send.md  03-send.mdx  04-custom.md  05-test.md  06-config.md  07-extension.mdx  todo.md
docs/src/components/: Curtain.tsx  DotMark.tsx
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css  heimu.css
docs/src/pages/: index.tsx
nonebot_plugin_saa/: __init__.py  abstract_factories.py  auto_select_bot.py  config.py
nonebot_plugin_saa/adapters/: __init__.py  discord.py  dodo.py  feishu.py  kaiheila.py  kritor.py  onebot_v11.py  onebot_v12.py  qq.py  qqguild.py  red.py  satori.py  telegram.py
nonebot_plugin_saa/ext/: uniseg.py
nonebot_plugin_saa/registries/: __init__.py  message_id.py  meta.py  platform_send_target.py  receipt.py
nonebot_plugin_saa/types/: __init__.py  common_message_segment.py  custom_message_segment.py
nonebot_plugin_saa/utils/: __init__.py  auto_select_bot.py  const.py  exceptions.py  get_bot.py  helpers.py  platform_send_target.py  receipt.py  registry.py  send_target.py  types.py
nonebot_plugin_send_anything_anywhere/: __init__.py
nonebot_plugin_send_anything_anywhere/adapters/: __init__.py  onebot_v11.py  onebot_v12.py
nonebot_plugin_send_anything_anywhere/types/: __init__.py  common_message_segment.py
nonebot_plugin_send_anything_anywhere/utils/: __init__.py  const.py  helpers.py  types.py
tests/: conftest.py  test_aggreated_send.py  test_alconna_uniseg.py  test_auto_select_bot.py  test_auto_select_qq_bot.py  test_auto_select_qqguild_bot.py  test_custom_message_segment.py  test_discord.py  test_dodo.py  test_feishu.py  test_get_bot.py  test_kaiheila.py  test_kritor.py  test_message.py  test_message_id.py  test_message_segment_build.py  test_onebot_v11.py  test_onebot_v12.py  test_platform_target.py  test_qq.py  test_qqguild.py  test_receipt.py  test_red.py  test_satori.py  test_send.py  test_send_target.py  test_telegram.py  utils.py
