[tool.poetry]
name = "nonebot-plugin-send-anything-anywhere"
version = "0.3.0"
description = "An adaptor for nonebot2 adaptors"
authors = ["felinae98 <731499577@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot_plugin_saa" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
strenum = "^0.4.8"
pydantic = "^1.10.5"
anyio = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.2"
ipdb = "^0.13.9"
pip = "^23.0"
pytest-cov = "^4.0.0"
nonebug = "^0.3.1"
nonebot2 = { extras = [
  "fastapi",
  "httpx",
  "websockets",
], version = "^2.0.0rc4" }
ruff = "^0.0.253"
pytest-mock = "^3.10.0"
respx = "^0.20.2"

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.2.2"
nonebot-adapter-qqguild = ">=0.2.1"
nonebot-adapter-kaiheila = "^0.2.12"
nonebot-adapter-telegram = "^0.1.0b12"
nonebot-adapter-feishu = "^2.0.1"
nonebot-adapter-red = ">=0.4.1"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "except ImportError:",
  "except Exception as e:",
]
